2001-11-10  Kevin Vandersloot <kfv101@psu.edu>

	From stable:

	2001-10-25  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: Pass the kill signal to the root password dialog
	so the proper action is taken as root. Also many minor cosmetic
	improvements.

2001-11-10  Kevin Vandersloot <kfv101@psu.edu>

	From stable:

	2001-10-19  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: add the Ximian gtop icon as default window
	icon


2001-11-10  Kevin Vandersloot <kfv101@psu.edu>

	* memmaps.c: refactor some code so that multiple dialogs
	can be present at the same time, and selecting multiple
	processes will show multiple dialogs

	* callbacks.c: save the last clicked process as the selected 
	process to show in the infoview

2001-11-09  Kevin Vandersloot <kfv101@psu.edu>

	More stable stuff, not quite finished:

	2001-10-18  Kevin Vandersloot <kfv101@psu.edu>

	Add ability to select multiple processes and do the corresponding
	actions on all selected processes. 

	* proctable.c: change selection mode to "multiple"

	* favorites.c: hide all selected processes. Also update the
	tree when a blacklisted processes is readded for good
	feedback
	
	* procactions.c: when putting up root dialog specify the 
	process name since there could be multiple processes that
	need to be killed as root. Term/Kill all selected processes.

	* procdialogs.c: make sure to hide all processes

	* callbacks.c: call any new functions to perforam actions on all
	processes

2001-11-09  Kevin Vandersloot <kfv101@psu.edu>

	Merge some stuff from stable

	* interface.c: remove the free space column in the disk
	list and make the mount directory column the second
	column. Hopefully makes the list a little easier to digest.

	* callbacks.c: change accordingly

	* util.c: make the choice in decimal numbers smarter for
	better display

	2001-10-14  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: improve the layout of the memory/swap sizes
	to make them more readable
