@@ -1,5 +1,9 @@
 2001-11-10  Kevin Vandersloot <kfv101@psu.edu>
 
+	* procdialogs.c: some string changes from stable
+
+2001-11-10  Kevin Vandersloot <kfv101@psu.edu>
+
 	From stable:
 
 	2001-10-25  Kevin Vandersloot <kfv101@psu.edu>
